[package]
name = "eco-cbz"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
chrono = { workspace = true, features = ["serde"], optional = true }
image.workspace = true
sanitize-filename.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
metadata = ["dep:chrono", "dep:serde", "dep:serde_json", "dep:serde_repr"]

[[bench]]
name = "image"
harness = false
