[package]
name = "eco-convert"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
eco-cbz.workspace = true
eco-pack.workspace = true
html5ever = { workspace = true, optional = true }
image.workspace = true
markup5ever_rcdom = { workspace = true, optional = true }
mobi.workspace = true
pdf.workspace = true
thiserror.workspace = true
tl.workspace = true
tracing.workspace = true

[features]
default = []
html5ever = ["dep:html5ever", "markup5ever_rcdom"]
