[package]
name = "eco-pack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
eco-cbz = { workspace = true, features = ["metadata"] }
glob.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
