[package]
name = "eco-view"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
camino.workspace = true
dark-light.workspace = true
dioxus.workspace = true
dioxus-desktop.workspace = true
dunce.workspace = true
eco-cbz = { workspace = true, features = ["metadata"] }
epub.workspace = true
futures.workspace = true
iced = { workspace = true, features = ["image"] }
thiserror.workspace = true
tl.workspace = true
tracing.workspace = true
zip.workspace = true
