[package]
name = "eco-viewer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
camino.workspace = true
clap = { workspace = true, features = ["derive"] }
dioxus.workspace = true
dioxus-desktop.workspace = true
dunce.workspace = true
eco-cbz = { workspace = true, features = ["metadata"] }
epub.workspace = true
thiserror.workspace = true
tl.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
